--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
 			href="./favicons/favicon-32x32.png"
 			type="image/x-icon"
 		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+			rel="stylesheet"
+		/>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1"
