--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="shortcut icon"
-      href="./favicons/favicon-32x32.png"
-      type="image/x-icon"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<head>
+		<meta charset="utf-8" />
+		<link
+			rel="shortcut icon"
+			href="./favicons/favicon-32x32.png"
+			type="image/x-icon"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+			rel="stylesheet"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+		/>
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <title>NC games</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+		<meta
+			name="description"
+			content="Web site created using create-react-app"
+		/>
+		<script
+			src="https://kit.fontawesome.com/9b428e89ce.js"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://kit.fontawesome.com/9b428e89ce.js"
+			crossorigin="anonymous"
+			defer
+		></script>
+		<title>NC games</title>
+	</head>
+	<body>
+		<noscript
+			>You need to enable JavaScript to run this
+			app.</noscript
+		>
+		<div id="root"></div>
+	</body>
 </html>
